# imdb

./: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
imdb/: Person.py  __init__.py  helpers.py  linguistics.py  utils.py
imdb/parser/http/: __init__.py  movieParser.py  personParser.py  piculet.py  searchMovieAdvancedParser.py  searchMovieParser.py  topBottomParser.py  utils.py
imdb/parser/s3/: __init__.py
tests/: test_http_search_movie.py  test_http_search_movie_advanced.py  test_locale.py
